- added working logins, -added new visual cues, example: displaying authors in index and in show, -added basic registration (not working, as not required by the chosen grade)

--- a/app/templates/task/show.html.twig
+++ b/app/templates/task/show.html.twig
@@ -14,6 +14,8 @@
             <dd>{{ task.createdAt|format_date('long') }}</dd>
             <dt>{{ 'label.updated_at'|trans }}</dt>
             <dd>{{ task.updatedAt|format_date('long') }}</dd>
+            <dt>{{ 'label.author.id'|trans }}</dt>
+            <dd>{{ task.author.email }}</dd>
             <dt>{{ 'label.title'|trans }}</dt>
             <dd>{{  task.title }}</dd>
             <dt>{{ 'label.category'|trans }}</dt>
