--- a/app/templates/task/index.html.twig
+++ b/app/templates/task/index.html.twig
@@ -11,20 +11,25 @@
             <thead>
             <tr>
                 <th>{{ knp_pagination_sortable(pagination, 'label.id'|trans, 'task.id') }}</th>
+                <th>{{ 'label.author'|trans }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label.created_at'|trans, 'task.createdAt') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label.updated_at'|trans, 'task.updatedAt') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label.title'|trans, 'task.title') }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'label.status'|trans, 'task.status') }}</th>
                 <th>{{ 'label.category'|trans }}</th>
                 <th>{{ 'label.actions'|trans }}</th>
+
             </tr>
             </thead>
             <tbody>
             {% for task in pagination.items %}
                 <tr>
                     <td>{{ task.id }}</td>
+                    <td>{{ task.author.email }}</td>
                     <td>{{ task.createdAt|format_date('long') }}</td>
                     <td>{{ task.updatedAt|format_date('long') }}</td>
                     <td>{{ task.title }}</td>
+                    <td>{{ task.status }}</td>
                     <td>{{ task.category.title }}</td>
                     <td class="row">
                         <a class="col" href="{{ url('task_show', {id: task.id}) }}" title="{{ 'action.show'|trans }}">
