--- a/app/templates/task/index.html.twig
+++ b/app/templates/task/index.html.twig
@@ -31,16 +31,22 @@
                     <td>{{ task.title }}</td>
                     <td>{{ task.status }}</td>
                     <td>{{ task.category.title }}</td>
-                    <td class="row">
-                        <a class="col" href="{{ url('task_show', {id: task.id}) }}" title="{{ 'action.show'|trans }}">
-                            {{ 'action.show'|trans }}
-                        </a>
-                        <a class="col" href="{{ url('task_delete', {id: task.id}) }}" title="{{ 'action.delete'|trans }}">
-                            {{ 'action.delete'|trans }}
-                        </a>
-                        <a class="col" href="{{ url('task_edit', {id: task.id}) }}" title="{{ 'action.edit'|trans }}">
-                            {{ 'action.edit'|trans }}
-                        </a>
+                    <td class=row">
+                        {% if is_granted('VIEW', task) %}
+                            <a class="col btn btn-outline-primary" href="{{ url('task_show', {id: task.id}) }}" title="{{ 'action.show'|trans }}">
+                                {{ 'action.show'|trans }}
+                            </a>
+                        {% endif %}
+                        {% if is_granted('EDIT', task) %}
+                            <a class="col btn btn-outline-success" href="{{ url('task_edit', {id: task.id}) }}" title="{{ 'action.edit'|trans }}">
+                                {{ 'action.edit'|trans }}
+                            </a>
+                        {% endif %}
+                        {% if is_granted('DELETE', task) %}
+                            <a class="col btn btn-outline-danger" href="{{ url('task_delete', {id: task.id}) }}" title="{{ 'action.delete'|trans }}">
+                                {{ 'action.delete'|trans }}
+                            </a>
+                        {% endif %}
                     </td>
                 </tr>
             {% endfor %}
