--- a/app/templates/task/index.html.twig
+++ b/app/templates/task/index.html.twig
@@ -30,7 +30,11 @@
                     <td>{{ task.updatedAt|format_date('long') }}</td>
                     <td>{{ task.title }}</td>
                     <td>{{ task.status }}</td>
-                    <td>{{ task.category.title }}</td>
+                    <td>
+                        <a href="{{ url('task_index', {'filters.category_id' : task.category.id}) }}" title="{{ task.category.title }}">
+                            {{ task.category.title }}
+                        </a>
+                    </td>
                     <td class=row">
                         {% if is_granted('VIEW', task) %}
                             <a class="col btn btn-outline-primary" href="{{ url('task_show', {id: task.id}) }}" title="{{ 'action.show'|trans }}">
@@ -61,6 +65,13 @@
                 <a class="btn btn-light btn-link" href="{{ url('category_index')}}" title="{{ 'category.action.index'|trans }}">
                     {{ 'category.action.index'|trans }}
                 </a>
+            </div>
+            <div class="col-2">
+            {% if app.request.uri %}
+                <a class="btn btn-outline-primary" href="{{ url('task_index') }}" title="{{ 'action.task.index'|trans }}">
+                    {{ 'action.task.index'|trans }}
+                </a>
+            {% endif %}
             </div>
         </div>
 
