- Fixed CRUD for tasks, - Hatred for github is immeasurable Still need to: = add and configure the impossible Status entity, = add admins access and edits = improve UI

--- a/app/templates/task/create.html.twig
+++ b/app/templates/task/create.html.twig
@@ -2,5 +2,5 @@
     page_title: 'title.task_create'|trans,
     form: form,
     submit_label: 'action.save'|trans,
-    back_to_list_path: 'title_index',
+    back_to_list_path: 'task_index',
 } %}
