-extensive UI changes and improvements

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -14,7 +14,7 @@
 <header class="container-fluid navbar navbar-expand-lg justify-content-between" style="background-color: #e3f2fd; ">
     {% block header %}
         <div class="col">
-            <h2 class="fw-light"> Bug_Trackerr</h2>
+            <h1 class="fw-light fs-1"> Bug_Trackerr</h1>
         </div>
         <div class="row">
             {% if app.user %}
