--- a/app/templates/category/show.html.twig
+++ b/app/templates/category/show.html.twig
@@ -1,29 +1,31 @@
 {% extends 'base.html.twig' %}
 
 {% block category %}
-    {{ 'category.category_details'|trans({'%id%': category.id|default('')}) }}
+    {{ 'Category Details'|trans({'%id%': category.id|default('')}) }}
 {% endblock %}
 
 {% block body %}
-    <h1>{{ 'category.category_details'|trans({'%id%': category.id|default('')}) }}</h1>
+    <h1>{{ 'Category Details'|trans({'%id%': category.id|default('')}) }}</h1>
     {% if category is defined and category|length %}
         <dl class="dl-horizontal">
-            <dt>{{ 'label.id'|trans }}</dt>
+            <dt>{{ 'Category_ID'|trans }}</dt>
             <dd>{{ category.id }}</dd>
-            <dt>{{ 'label.created_at'|trans }}</dt>
+            <dt>{{ 'Added'|trans }}</dt>
             <dd>{{ category.createdAt|format_date('long') }}</dd>
-            <dt>{{ 'label.updated_at'|trans }}</dt>
+            <dt>{{ 'Updated'|trans }}</dt>
             <dd>{{ category.updatedAt|format_date('long') }}</dd>
-            <dt>{{ 'label.category'|trans }}</dt>
+            <dt>{{ 'Category'|trans }}</dt>
+            <dd>{{ category.title }}</dd>
+
         </dl>
         <button class="btn btn-light">
-            <a href="{{ url('category_index') }}" category="{{ 'action.back_to_list'|trans }}">
-                {{ 'action.back_to_list'|trans }}
+            <a href="{{ url('category_index') }}" category="{{ 'Return'|trans }}">
+                {{ 'Return'|trans }}
             </a>
         </button>
     {% else %}
         <p>
-            {{ 'message.record_not_found'|trans }}
+            {{ 'Category Not Found'|trans }}
         </p>
     {% endif %}
 {% endblock %}
