--- a/app/templates/default/_form.html.twig
+++ b/app/templates/default/_form.html.twig
@@ -26,9 +26,9 @@ parameters:
         <input type="submit" value="{{ submit_label }}" class="btn btn-primary"/>
     </div>
     {% if back_to_list_path|default(false) %}
-        <div class="form-group row float-sm-left">
-            <a href="{{ url(back_to_list_path) }}" class="btn btn-link">
-                {{ 'action.back_to_list'|trans }}
+        <div class="form-group row float-sm-left mt-2">
+            <a class="btn btn-primary" href="{{ url(back_to_list_path) }}" class="btn btn-link">
+                {{ 'Return To Safety'|trans }}
             </a>
         </div>
     {% endif %}
