--- a/app/templates/task/edit.html.twig
+++ b/app/templates/task/edit.html.twig
@@ -1,6 +1,6 @@
 {% include 'default/_form.html.twig' with {
-    page_title: 'title.task_edit'|trans({'%id%': task.id|default('')}),
+    page_title: 'Edit Bug Report'|trans({'%id%': task.id|default('')}),
     form: form,
-    submit_label: 'action.edit'|trans,
+    submit_label: 'Submit Changes'|trans,
     back_to_list_path: 'task_index',
 } %}
