--- a/app/templates/security/login.html.twig
+++ b/app/templates/security/login.html.twig
@@ -8,12 +8,6 @@
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
-
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
@@ -34,9 +28,15 @@
             </label>
         </div>
     #}
-
-    <button class="btn btn-lg btn-primary mt-3" type="submit">
-        Sign in
-    </button>
+        <div class="col"></div>
+            <button class="btn btn-lg btn-primary mt-3" type="submit">
+                Sign in
+            </button>
+        </div>
 </form>
+    <div class="col mt-1">
+        <a class="btn btn-outline-primary" href="{{ url('task_index') }}" title="{{ 'Main Site'|trans }}">
+            {{ 'Main Site'|trans }}
+        </a>
+    </div>
 {% endblock %}
