-Added complete translation! -Basic cleanup -Began convertion to my database

--- a/app/templates/category/create.html.twig
+++ b/app/templates/category/create.html.twig
@@ -1,6 +1,6 @@
 {% include 'default/_form.html.twig' with {
-    page_title: 'Create Category'|trans,
+    page_title: 'label.create_category'|trans,
     form: form,
-    submit_label: 'Add New Category'|trans,
+    submit_label: 'action.create_category'|trans,
     back_to_list_path: 'category_index',
 } %}
