--- a/app/templates/default/_form.html.twig
+++ b/app/templates/default/_form.html.twig
@@ -28,7 +28,7 @@ parameters:
     {% if back_to_list_path|default(false) %}
         <div class="form-group row float-sm-left mt-2">
             <a class="btn btn-primary" href="{{ url(back_to_list_path) }}" class="btn btn-link">
-                {{ 'Return To Safety'|trans }}
+                {{ 'action.return'|trans }}
             </a>
         </div>
     {% endif %}
