--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}
+            {{ 'label.welcome'|trans }}
+        {% endblock %}</title>
     {% block stylesheets %}
         <link
                 href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -20,7 +22,7 @@
             {% if app.user %}
                 <div class="col">
                     <h5 class="fw-medium text-nowrap pt-2">
-                        You are logged in as:
+                        {{ 'label.logged_info'|trans }}
                     </h5>
                 </div>
                 <div class="col">
@@ -28,19 +30,27 @@
                 </div>
                 {% if 'ROLE_ADMIN' in app.user.roles %}
                 <div class="col">
-                    <a class="btn btn-primary text-nowrap" href="{{ path('user_change_email') }}">Change email</a>
+                    <a class="btn btn-primary text-nowrap" href="{{ path('user_change_email') }}">
+                        {{ 'title.change_info'|trans }}
+                    </a>
                 </div>
                 <div class="col">
-                    <a class="btn btn-primary text-nowrap" href="{{ path('user_change_password') }}">Change password</a>
+                    <a class="btn btn-primary text-nowrap" href="{{ path('user_change_password') }}">
+                        {{ 'title.change_password'|trans }}
+                    </a>
                 </div>
                 {% endif %}
                 <div class="col">
-                    <a class="btn btn-primary" href="{{ path('app_logout') }}">Logout</a>
+                    <a class="btn btn-primary" href="{{ path('app_logout') }}">
+                        {{ 'action.sign_out'|trans }}
+                    </a>
                 </div>
             {% endif %}
             {% if app.user is null %}
                 <div class="col">
-                    <a class="btn btn-primary" href="{{ path('app_login') }}">Sign In</a>
+                    <a class="btn btn-primary" href="{{ path('app_login') }}">
+                        {{ 'action.sign_in'|trans }}
+                    </a>
                 </div>
             {% endif %}
         </div>
