--- a/app/templates/category/delete.html.twig
+++ b/app/templates/category/delete.html.twig
@@ -1,6 +1,6 @@
 {% include 'default/_form.html.twig' with {
-    page_title: 'Delete Category'|trans({'%id%': category.id|default('')}),
+    page_title: 'label.delete_category'|trans({'%id%': category.id|default('')}),
     form: form,
-    submit_label: 'Delete'|trans,
+    submit_label: 'action.delete'|trans,
     back_to_list_path: 'category_index',
 } %}
