--- a/app/templates/security/login.html.twig
+++ b/app/templates/security/login.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}
+    {{ 'label.title_main_login'|trans }}
+{% endblock %}
 
 {% block body %}
 <form method="post">
@@ -8,10 +10,10 @@
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
+    <h1 class="h3 mb-3 font-weight-normal">{{ 'title.please_sign_in'|trans }}</h1>
+    <label for="inputEmail">{{ 'label.email_login'|trans }}</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
+    <label for="inputPassword">{{ 'label.password'|trans }}</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
@@ -30,13 +32,13 @@
     #}
         <div class="col"></div>
             <button class="btn btn-lg btn-primary mt-3" type="submit">
-                Sign in
+                {{ 'action.sign_in'|trans }}
             </button>
         </div>
 </form>
-    <div class="col mt-1">
-        <a class="btn btn-outline-primary" href="{{ url('task_index') }}" title="{{ 'Main Site'|trans }}">
-            {{ 'Main Site'|trans }}
+    <div class="col mt-2">
+        <a class="btn btn-outline-primary" href="{{ url('task_index') }}" title="{{ 'action.main_site'|trans }}">
+            {{ 'action.main_site'|trans }}
         </a>
     </div>
 {% endblock %}
