--- a/app/templates/task/create.html.twig
+++ b/app/templates/task/create.html.twig
@@ -1,5 +1,5 @@
 {% include 'default/_form.html.twig' with {
-    page_title: 'title.task_create'|trans,
+    page_title: 'label.create_bug'|trans,
     form: form,
     submit_label: 'action.save'|trans,
     back_to_list_path: 'task_index',
