--- a/app/templates/task/delete.html.twig
+++ b/app/templates/task/delete.html.twig
@@ -1,6 +1,6 @@
 {% include 'default/_form.html.twig' with {
-    page_title: 'Delete Bug Report'|trans({'%id%': task.id|default('')}),
+    page_title: 'label.delete_bug'|trans({'%id%': task.id|default('')}),
     form: form,
-    submit_label: 'Delete'|trans,
+    submit_label: 'action.delete'|trans,
     back_to_list_path: 'task_index',
 } %}
